--- a/telaprincipal.html
+++ b/telaprincipal.html
@@ -1,51 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NEOFIT</title>
-    <link rel="stylesheet" href="./src/style/one.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./src/style/one.css" />
+  </head>
+  <body>
     <!-- NAVBAR -->
-    <div class="navbar">
-        <div class="header-content">
-            <h1 class="logo">NEO<span>FIT</span></h1>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Produtos</li>
-                    <li>Sobre</li>
-                    <li>Contato</li>
-                </ul>
-            </nav>
-            <div class="nav-icon">
-                <img src="./src/imgs/menu.png" alt="Menu">
-                <img src="./src/imgs/cart.png" alt="Carrinho" class="menu-button">
-            </div>
-        </div>
-    </div>
-
-    <header>
-        <div class="header-content">
-
-            <div class="header-bottom-side">
-
-                <div class="header-bottom-side-left">
-                    <h2>Dê um novo cuidado ao seu corpo</h2>
-                    <p>Sucesso sempre tem a ver com trabalho duro, consistência e foco. Faça isso e a grandeza virá.</p>
-                    <button>Ver agora &#8594;</button>
-                </div>
-
-                <div class="header-bottom-side-right">
-                    <img src="./src/imgs/banner2.png" alt="Imagem principal">
-                </div>
-
-            </div>
-
-        </div>
+    <header class="navbar">
+      <div class="header-content">
+        <h1 class="logo">NEO<span>FIT</span></h1>
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>Criar Produto</li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    
-</body>
+
+    <
+    <div class="container_flex">
+      <div class="prod">
+        <div style="display: flex; align-items: center; justify-content: space-around;">
+          <h3>wheyisolado</h3>
+          <button class="deletar">X</button>
+        </div>
+        <p>Preço:</p>
+        <div class="btn-group">
+          <button class="comprar">Comprar</button>
+          <button class="editar">Editar</button>
+        </div>
+      </div>
+
+      <div class="prod">
+        <h3>wheyisolado</h3>
+        <p>Preço:</p>
+        <div class="btn-group">
+          <button class="comprar">Comprar</button>
+          <button class="editar">Editar</button>
+        </div>
+      </div>
+
+      <div class="prod">
+        <h3>wheyisolado</h3>
+        <p>Preço:</p>
+        <div class="btn-group">
+          <button class="comprar">Comprar</button>
+          <button class="editar">Editar</button>
+        </div>
+      </div>
+
+      <div class="prod">
+        <h3>wheyisolado</h3>
+        <p>Preço:</p>
+        <div class="btn-group">
+          <button class="comprar">Comprar</button>
+          <button class="editar">Editar</button>
+        </div>
+      </div>
+
+      <div class="prod">
+        <h3>wheyisolado</h3>
+        <p>Preço:</p>
+        <div class="btn-group">
+          <button class="comprar">Comprar</button>
+          <button class="editar">Editar</button>
+        </div>
+      </div>
+
+      <div class="prod">
+        <h3>wheyisolado</h3>
+        <p>Preço:</p>
+        <div class="btn-group">
+          <button class="comprar">Comprar</button>
+          <button class="editar">Editar</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
