--- a/cadastro.html
+++ b/cadastro.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BAILLYFIT</title>
     <link rel="stylesheet" href="./src/style/cadastro.css" />
     <title>Formulário de Cadastro</title>
   </head>
@@ -52,14 +53,6 @@
             <label for="senha">Senha</label>
             <input type="password" id="senha" placeholder="Digite sua senha" />
           </div>
-          <!-- <div class="input-group">
-            <label for="confirmar">Confirmar Senha</label>
-            <input
-              type="password"
-              id="confirmar"
-              placeholder="Confirme sua senha"
-            />
-          </div> -->
         </div>
 
         <div class="form-row">
@@ -96,6 +89,10 @@
     </div>
     <script type="module">
       import { ApiRequest } from "./src/models/api.js";
+
+      if(localStorage.getItem("@token")){
+        window.location.replace("./telaprincipal.html")
+      }
 
       const btn_register = document.querySelector(".button__register")
       const register_nome = document.querySelector("#nome")
